--- a/src/components/BlockDivider/BlockDivider.module.scss
+++ b/src/components/BlockDivider/BlockDivider.module.scss
@@ -11,6 +11,26 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    @media screen and (max-width: $screen-width-large) {
+        margin: 60px 0;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        margin: 50px 0;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        margin: 40px 0;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        margin: 30px 0;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        margin: 20px 0;
+    }
 }
 
 .line {
