--- a/src/components/BlockWrapper/BlockWrapper.module.scss
+++ b/src/components/BlockWrapper/BlockWrapper.module.scss
@@ -1,8 +1,42 @@
+@import "../../common-scss/variables";
+
 .contentBlock {
-    padding: 0 208px;
+    padding: 0 10%;
+
+    @media screen and (max-width: $screen-width-medium) {
+        padding: 0 100px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        padding: 0 80px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        padding: 0 70px;
+    }
 }
 
 .blockWrapper {
-    padding: 30px 0 60px 0;
+    padding: 30px 0 60px;
     background-color: #9fc2e5;
+
+    @media screen and (max-width: $screen-width-large) {
+        padding: 30px 0 60px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        padding: 24px 0 50px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        padding: 22px 0 40px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        padding: 18px 0 30px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        padding: 14px 0 20px;
+    }
 }
