--- a/src/components/CatalogPage/CatalogHeader/CatalogHeader.module.scss
+++ b/src/components/CatalogPage/CatalogHeader/CatalogHeader.module.scss
@@ -8,8 +8,11 @@
 }
 
 .searchContainer {
+    width: 100%;
     height: 36px;
     margin-bottom: 30px;
+    display: flex;
+    flex-flow: row nowrap;
 
     & > * {
         display: inline-block;
@@ -19,18 +22,64 @@
         outline: none;
         box-shadow: 0 4px 4px $shadow-color;
     }
+
+    @media screen and (max-width: $screen-width-large) {
+        height: 36px;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        height: 32px;
+        margin-bottom: 26px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        height: 28px;
+        margin-bottom: 22px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        height: 26px;
+        margin-bottom: 20px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        height: 24px;
+        margin-bottom: 16px;
+    }
 }
 
 .searchField {
-    width: 90%;
+    width: calc(100% - 70px);
     padding: 16px;
     background-color: $second-color;
     color: $main-font-color;
     font-size: 14px;
+
+    @media screen and (max-width: $screen-width-large) {
+        padding: 16px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        padding: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        padding: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        padding: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        padding: 12px;
+    }
 }
 
 .searchButton {
     width: 10%;
+    min-width: 70px;
     background-color: $main-color;
     color: $logo-font-color;
     font-weight: bold;
@@ -40,6 +89,29 @@
     &:hover {
         background-color: $dark-main-color;
         cursor: pointer;
+    }
+}
+
+.searchButton, .searchField {
+
+    @media screen and (max-width: $screen-width-large) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        font-size: 10px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        font-size: 10px;
     }
 }
 
@@ -83,6 +155,31 @@
 
     img {
         margin-right: 10px;
+
+        @media screen and (max-width: $screen-width-large) {
+            width: 20px;
+            height: 20px;
+        }
+
+        @media screen and (max-width: $screen-width-big) {
+            width: 18px;
+            height: 18px;
+        }
+
+        @media screen and (max-width: $screen-width-medium) {
+            width: 16px;
+            height: 16px;
+        }
+
+        @media screen and (max-width: $screen-width-small) {
+            width: 14px;
+            height: 14px;
+        }
+
+        @media screen and (max-width: $screen-width-tiny) {
+            width: 12px;
+            height: 12px;
+        }
     }
 
     & > * {
@@ -92,6 +189,36 @@
 
     &:hover {
         background-color: $dark-second-color;
+    }
+
+    @media screen and (max-width: $screen-width-large) {
+        font-size: 14px;
+        height: 36px;
+        width: 120px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        font-size: 12px;
+        height: 32px;
+        width: 110px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        font-size: 12px;
+        height: 28px;
+        width: 100px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        font-size: 10px;
+        height: 26px;
+        width: 90px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        font-size: 10px;
+        height: 24px;
+        width: 80px;
     }
 }
 
@@ -121,14 +248,62 @@
     &.active::after {
         content: '';
         display: block;
+        width: 60%;
+        height: 60%;
+        position: relative;
+        margin: 20%;
+        background-color: $main-color;
+    }
+
+    @media screen and (max-width: $screen-width-large) {
+        width: 20px;
+        height: 20px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        width: 18px;
+        height: 18px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        width: 16px;
+        height: 16px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        width: 14px;
+        height: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
         width: 12px;
         height: 12px;
-        position: relative;
-        margin: 4px;
-        background-color: $main-color;
     }
 }
 
 .filterValueLabel {
     vertical-align: middle;
+}
+
+.filterValueLabel, .filterTitle {
+
+    @media screen and (max-width: $screen-width-large) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        font-size: 10px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        font-size: 10px;
+    }
 }
