--- a/src/components/CatalogPage/ListWrapper/ListWrapper.module.scss
+++ b/src/components/CatalogPage/ListWrapper/ListWrapper.module.scss
@@ -21,6 +21,26 @@
     transform: translateY(-60%);
     background-color: $background-color;
     color: $dark-main-color;
+
+    @media screen and (max-width: $screen-width-large) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        font-size: 10px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        font-size: 10px;
+    }
 }
 
 .line {
