--- a/src/components/Contacts/HowToFindUs/HowToFindUs.module.scss
+++ b/src/components/Contacts/HowToFindUs/HowToFindUs.module.scss
@@ -2,18 +2,40 @@
 
 .locationContainer {
   width: 100%;
-  margin-top: 10px;
   height: 250px;
+  margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 5%;
+
+  @media screen and (max-width: $screen-width-medium) {
+    flex-flow: column nowrap;
+    height: 400px;
+  }
 }
 
 .locationInfo {
   width: 50%;
   font-size: 18px;
   text-align: justify;
+
+  @media screen and (max-width: $screen-width-big) {
+    font-size: 16px;
+  }
+
+  @media screen and (max-width: $screen-width-medium) {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  @media screen and (max-width: $screen-width-small) {
+    font-size: 12px;
+  }
+
+  @media screen and (max-width: $screen-width-tiny) {
+    font-size: 10px;
+  }
 }
 
 .street {
@@ -25,16 +47,33 @@
 .map {
   width: 100%;
   height: 100%;
+  min-height: 200px;
   display: block;
   position: relative;
-  top: -10px;
-  left: -14px;
+  top: -100%;
+  left: 0;
 }
 
 .box {
   width: 50%;
   height: 100%;
-  border: 3px dashed #{$second-color};
-  margin: 50px;
-  float: left;
+  min-height: 200px;
+  margin: 50px 0 50px 50px;
+
+  @media screen and (max-width: $screen-width-medium) {
+    margin: 0;
+    width: 100%;
+  }
+
+  &::before {
+    content: '';
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: 14px;
+    left: 10px;
+    border: 3px dashed #{$second-color};
+  }
 }
