--- a/src/components/Contacts/OurContacts/OurContacts.module.scss
+++ b/src/components/Contacts/OurContacts/OurContacts.module.scss
@@ -7,9 +7,16 @@
 .contactsContainer {
   margin-top: 50px;
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(2, minmax(210px, auto));
   justify-items: center;
   align-items: center;
+
+  @media screen and (max-width: $screen-width-medium) {
+    margin-top: 30px;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(3, auto);
+    row-gap: 20px;
+  }
 }
 
 .contactContainer {
@@ -17,7 +24,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 16px
+  gap: 16px;
+
+  @media screen and (max-width: $screen-width-medium) {
+    flex-flow: row nowrap;
+    gap: 8px;
+  }
 }
 
 .contactTitle {
@@ -25,17 +37,61 @@
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
-  gap: 6px
+  gap: 6px;
+
+  @media screen and (max-width: $screen-width-big) {
+    font-size: 18px;
+  }
+
+  @media screen and (max-width: $screen-width-medium) {
+    font-size: 14px;
+  }
+
+  @media screen and (max-width: $screen-width-small) {
+    font-size: 12px;
+  }
+
+  @media screen and (max-width: $screen-width-tiny) {
+    font-size: 11px;
+  }
 }
 
 .contactImage {
   width: 26px;
   height: 26px;
+
+  @media screen and (max-width: $screen-width-big) {
+    width: 24px;
+    height: 24px;
+  }
+
+  @media screen and (max-width: $screen-width-medium) {
+    width: 22px;
+    height: 22px;
+  }
+
+  @media screen and (max-width: $screen-width-small) {
+    width: 20px;
+    height: 20px;
+  }
+
+  @media screen and (max-width: $screen-width-tiny) {
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .contact {
   text-align: center;
   font-size: 14px;
+
+  @media screen and (max-width: $screen-width-medium) {
+    font-size: 12px;
+  }
+
+  @media screen and (max-width: $screen-width-small) {
+    font-size: 10px;
+  }
 }
 
 .contactWithCopy {
