--- a/src/components/Contacts/Representatives/Representative/Representative.module.scss
+++ b/src/components/Contacts/Representatives/Representative/Representative.module.scss
@@ -1,42 +1,79 @@
 @import "src/common-scss/variables";
 
 .regionPolygon {
-  width: 330px;
-  height: 32px;
-  padding: 6px 0;
-  margin: 0 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: $main-font-color;
-  font-size: 16px;
-  font-weight: bold;
-  text-transform: uppercase;
-  transition-duration: 0.2s;
+    width: 100%;
+    padding: 4px 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $main-font-color;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition-duration: 0.2s;
 }
 
 .regionDescription {
-  padding: 6px;
-  display: grid;
-  grid-template-areas:
+    padding: 6px;
+    display: grid;
+    grid-template-areas:
           'name name'
           'phone schedule';
-  transition-duration: 0.2s;
+    transition-duration: 0.2s;
 }
 
 .aboutName {
-  padding-bottom: 6px;
-  grid-area: name;
-  justify-self: center;
+    padding-bottom: 6px;
+    grid-area: name;
+    justify-self: center;
 }
 
 .aboutPhone {
-  padding: 6px;
-  grid-area: phone;
+    padding: 6px;
+    grid-area: phone;
 }
 
 .aboutSchedule {
-  padding: 6px;
-  grid-area: schedule;
-  justify-self: flex-end;
+    padding: 6px;
+    grid-area: schedule;
+    justify-self: flex-end;
+}
+
+@media screen and (max-width: $screen-width-large) {
+    .regionPolygon {
+      font-size: 14px;
+    }
+
+    .regionDescription {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: $screen-width-big) {
+    .regionPolygon {
+        font-size: 12px;
+    }
+
+    .regionDescription {
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: $screen-width-medium) {
+    .regionPolygon {
+        font-size: 10px;
+    }
+
+    .regionDescription {
+        font-size: 9px;
+    }
+}
+
+@media screen and (max-width: $screen-width-small) {
+
+}
+
+@media screen and (max-width: $screen-width-tiny) {
+
 }
