--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,30 +1,154 @@
 @import './../../common-scss/variables';
 
-.headerContainer {
+.headerContainer, .fixedHeader {
+    position: fixed;
+    z-index: 32;
     width: 100%;
     height: $header-height;
     display: flex;
-    position: relative;
-    z-index: 32;
     flex-direction: row;
     justify-content: space-between;
-    background-color: $background-color;
     box-shadow: 0 3px 5px $shadow-color;
+    background-color: $background-color;
+    transition-duration: 0.5s;
+
+    @media screen and (max-width: $screen-width-large) {
+        height: $large-header-height;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        height: $big-header-height;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        height: $medium-header-height;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        height: $small-header-height;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        height: $tiny-header-height;
+    }
+}
+
+.headerContainer {
+}
+
+.fixedHeader {
+    opacity: 0.8;
+
+    &:hover {
+        opacity: 1;
+    }
 }
 
 .headerPolygon {
-    shape-outside: polygon(0 0, 350px 0, 250px 60px, 0 60px);
-    clip-path: polygon(0 0, 350px 0, 250px 60px, 0 60px);
-    width: 350px;
+    box-sizing: border-box;
+    shape-outside: polygon(0 0, 100% 0, calc(100% - 100px) $header-height, 0 $header-height);
+    clip-path: polygon(0 0, 100% 0, calc(100% - 100px) $header-height, 0 $header-height);
+    width: 100%;
+    min-width: 260px;
     height: $header-height;
     padding: 13px 0 0 50px;
     background: linear-gradient(to right, #{$main-color}, #{$dark-main-color});
     color: $logo-font-color;
-    font-size: 24px;
+    transition-duration: 0.5s;
+
+    & > span {
+        font-size: 24px;
+    }
+
+    @media screen and (max-width: $screen-width-large) {
+        height: $large-header-height;
+        shape-outside: polygon(
+                        0 0,
+                        100% 0,
+                        calc(100% - 87px) $large-header-height,
+                        0 $large-header-height
+        );
+        clip-path: polygon(
+                        0 0,
+                        100% 0,
+                        calc(100% - 87px) $large-header-height,
+                        0 $large-header-height
+        );
+        padding: 10px 0 0 50px;
+
+        & > span {
+            font-size: 22px;
+        }
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        height: $big-header-height;
+        shape-outside: polygon(
+                        0 0,
+                        100% 0,
+                        calc(100% - 77px) $big-header-height,
+                        0 $big-header-height
+        );
+        clip-path: polygon(
+                        0 0,
+                        100% 0,
+                        calc(100% - 77px) $big-header-height,
+                        0 $big-header-height
+        );
+        padding: 8px 0 0 50px;
+
+        & > span {
+            font-size: 20px;
+        }
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        height: $medium-header-height;
+        shape-outside: polygon(
+                        0 0,
+                        100% 0,
+                        calc(100% - 67px) $medium-header-height,
+                        0 $medium-header-height
+        );
+        clip-path: polygon(
+                        0 0,
+                        100% 0,
+                        calc(100% - 67px) $medium-header-height,
+                        0 $medium-header-height
+        );
+
+        & > span {
+            font-size: 18px;
+        }
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        height: $small-header-height;
+
+        & > span {
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        height: $tiny-header-height;
+
+        & > span {
+            font-size: 14px;
+        }
+    }
 }
 
 .logoContainer {
     width: 350px;
     height: $header-height;
     filter: drop-shadow(3px 3px 5px #{$shadow-color});
+
+    & > a {
+        text-decoration: none;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        width: calc(100% - 60px)
+    }
 }
