--- a/src/components/Header/Menu/CatalogSubmenu/CatalogSubmenu.module.scss
+++ b/src/components/Header/Menu/CatalogSubmenu/CatalogSubmenu.module.scss
@@ -2,9 +2,9 @@
 
 .submenuContainer {
     position: absolute;
-    margin-top: 60px;
+    margin-top: $header-height;
     align-self: flex-start;
-    margin-left: -90px;
+    margin-left: -190px;
     min-width: 240px;
     max-width: 480px;
     height: auto;
@@ -12,6 +12,18 @@
     padding: 0;
     background-color: $background-color;
     box-shadow: 3px 3px 5px $shadow-color;
+
+    @media screen and (max-width: $screen-width-large) {
+        margin-top: $large-header-height;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        margin-top: $big-header-height;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        margin-top: $medium-header-height;
+    }
 }
 
 .submenuItems {
@@ -45,6 +57,24 @@
         }
         &:active {
             background-color: $active-link-bcg-color;
+        }
+
+        @media screen and (max-width: $screen-width-large) {
+            min-height: 40px;
+            line-height: 18px;
+            font-size: 14px;
+        }
+
+        @media screen and (max-width: $screen-width-big) {
+            min-height: 36px;
+            line-height: 16px;
+            font-size: 12px;
+        }
+
+        @media screen and (max-width: $screen-width-medium) {
+            min-height: 32px;
+            line-height: 14px;
+            font-size: 10px;
         }
     }
 
