--- a/src/components/common/Product/Product.module.scss
+++ b/src/components/common/Product/Product.module.scss
@@ -20,6 +20,38 @@
     & > *:not(:last-child) {
         margin-bottom: 12px;
     }
+
+    @media screen and (max-width: $screen-width-large) {
+        width: 170px;
+        height: 300px;
+        padding: 12px;
+        display: grid;
+        grid-template-rows: 182px 1px auto 24px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        width: 140px;
+        height: 260px;
+        padding: 10px;
+        display: grid;
+        grid-template-rows: 142px 1px auto 24px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        width: 120px;
+        height: 220px;
+        padding: 10px;
+        display: grid;
+        grid-template-rows: 122px 1px auto 24px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        width: 100px;
+        height: 200px;
+        padding: 8px;
+        display: grid;
+        grid-template-rows: 112px 1px auto 24px;
+    }
 }
 
 .productImageContainer {
@@ -31,6 +63,26 @@
     align-items: center;
     background-color: $background-color;
     border-radius: 50%;
+
+    @media screen and (max-width: $screen-width-large) {
+        width: 158px;
+        height: 158px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        width: 120px;
+        height: 120px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        width: 110px;
+        height: 110px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        width: 100px;
+        height: 100px;
+    }
 }
 
 .productImage {
@@ -55,9 +107,49 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
+
+    @media screen and (max-width: $screen-width-large) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        font-size: 12px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        font-size: 10px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        font-size: 10px;
+    }
 }
 
 .productPrice {
     grid-area: price;
     font-size: 22px;
+
+    @media screen and (max-width: $screen-width-large) {
+        font-size: 20px;
+    }
+
+    @media screen and (max-width: $screen-width-big) {
+        font-size: 18px;
+    }
+
+    @media screen and (max-width: $screen-width-medium) {
+        font-size: 16px;
+    }
+
+    @media screen and (max-width: $screen-width-small) {
+        font-size: 14px;
+    }
+
+    @media screen and (max-width: $screen-width-tiny) {
+        font-size: 12px;
+    }
 }
