--- a/src/components/AboutCompany/AboutCompanySection/AboutCompanySection.module.scss
+++ b/src/components/AboutCompany/AboutCompanySection/AboutCompanySection.module.scss
@@ -3,7 +3,6 @@
 .textBlock {
     padding: 0;
     margin: 40px 0 0 0;
-    line-height: 30px;
     /*column-count: 2;
     column-gap: 34px;
     column-width: 300px;
@@ -20,6 +19,42 @@
         margin: 60px 0 60px;
         padding: 0 60px;
         text-align: center;
+        font-size: 20px;
+        line-height: 30px;
+
+        @media screen and (max-width: $screen-width-large) {
+            margin: 50px 0 50px;
+            padding: 0 50px;
+            font-size: 18px;
+            line-height: 28px;
+        }
+
+        @media screen and (max-width: $screen-width-big) {
+            margin: 40px 0 40px;
+            padding: 0 40px;
+            font-size: 16px;
+            line-height: 26px;
+        }
+
+        @media screen and (max-width: $screen-width-medium) {
+            margin: 32px 0 32px;
+            padding: 0 28px;
+            font-size: 14px;
+            line-height: 22px;
+        }
+
+        @media screen and (max-width: $screen-width-small) {
+            margin: 14px 0 14px;
+            padding: 0 14px;
+            font-size: 13px;
+            line-height: 20px;
+        }
+
+        @media screen and (max-width: $screen-width-tiny) {
+            margin: 10px 0 10px;
+            padding: 0 10px;
+            font-size: 12px;
+        }
     }
 
     hr {
