--- a/src/components/AboutCompany/Certificates/Certificates.module.scss
+++ b/src/components/AboutCompany/Certificates/Certificates.module.scss
@@ -1,8 +1,7 @@
 .certificatesContainer {
     margin-top: 60px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    justify-items: center;
+    display: flex;
+    justify-content: space-evenly;
     column-gap: 20px;
     row-gap: 40px;
 }
