Remove price from information of product and fix some styles

--- a/src/components/AboutCompany/Certificates/Certificate/Certificate.module.scss
+++ b/src/components/AboutCompany/Certificates/Certificate/Certificate.module.scss
@@ -21,15 +21,15 @@
 
 .openedCertificateBackground {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
     left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 200;
-    background-color: $shadow-color;
+    background-color: $product-info-background-color;
+    z-index: 35;
 }
 
 .openedCertificateWrapper {
